syntax = "proto2";
package msg;

// ProtoMessage
// If AuthID == 0 then Payload is a MessageEnvelop otherwise Payload is a ProtoEncryptedPayload
message ProtoMessage {
    optional int64 AuthID = 1;
    optional bytes MessageKey = 2; // 32 bytes
    required bytes Payload = 3;
}


message EchoRequest {
    required int64 Int = 1;
    required bool Bool = 2;
    required int64 Timestamp = 3;
}

message EchoResponse {
    required int64 Int = 1;
    required bool Bool = 2;
    required int64 Timestamp = 4;
    required int64 Delay = 5;
    required string ServerID = 6;
}

message AskRequest {
    required string ServerID = 1;
}

message AskResponse {
    required string Coordinator = 1;
    required string Responder = 2;
}